finished current weather API

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <h2>Enter city to search for:</h2>
 
     <input type="text" id="userInput" />
-    <button class="beer">Submit</button>
+    <button class="btn btn-primary" type="button">Submit</button>
     <h2>Five Day Weather Forcast</h2>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
