displays 5-day forecast

--- a/index.html
+++ b/index.html
@@ -43,47 +43,47 @@
     <div class="grid-two">
       <div class="forcast-one">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="dayOneDate"></li>
+          <li><img class="dayOneIcon" src="" alt="" /></li>
+          <li class="dayOneTemp"></li>
+          <li class="dayOneWind"></li>
+          <li class="dayOneHumd"></li>
         </ul>
       </div>
       <div class="forcast-two">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="dayTwoDate"></li>
+          <li><img class="dayTwoIcon" src="" alt="" /></li>
+          <li class="dayTwoTemp"></li>
+          <li class="dayTwoWind"></li>
+          <li class="dayTwoHumd"></li>
         </ul>
       </div>
       <div class="forcast-three">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="dayThreeDate"></li>
+          <li><img class="dayThreeIcon" src="" alt="" /></li>
+          <li class="dayThreeTemp"></li>
+          <li class="dayThreeWind"></li>
+          <li class="dayThreeHumd"></li>
         </ul>
       </div>
       <div class="forcast-four">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="dayFourDate"></li>
+          <li><img class="dayFourIcon" src="" alt="" /></li>
+          <li class="dayFourTemp"></li>
+          <li class="dayFourWind"></li>
+          <li class="dayFourHumd"></li>
         </ul>
       </div>
       <div class="forcast-five">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="dayFiveDate"></li>
+          <li><img class="dayFiveIcon" src="" alt="" /></li>
+          <li class="dayFiveTemp"></li>
+          <li class="dayFiveWind"></li>
+          <li class="dayFiveHumd"></li>
         </ul>
       </div>
     </div>
