fixed search history btns

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
         </ul>
       </div>
     </div>
+    <h2 class="title-search">Search History</h2>
+    <button class="btn-d btn-primary">Display</button>
+    <ul class="search-display"></ul>
+
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
